--- a/src/contact/templates/contact.html
+++ b/src/contact/templates/contact.html
@@ -32,29 +32,10 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8">
-          <form action="#" method="post" class="probootstrap-form mb60">
-            <div class="row">
-              <div class="col-md-6">
-                <div class="form-group">
-                  <label for="fname">First Name</label>
-                  <input type="text" class="form-control" id="fname" name="fname">
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-group">
-                  <label for="lname">Last Name</label>
-                  <input type="text" class="form-control" id="lname" name="lname">
-                </div>
-              </div>
-            </div>
-            <div class="form-group">
-              <label for="email">Email</label>
-              <input type="email" class="form-control" id="email" name="email">
-            </div>
-            <div class="form-group">
-              <label for="message">Message</label>
-              <textarea cols="30" rows="10" class="form-control" id="message" name="message"></textarea>
-            </div>
+          <form method="post" class="probootstrap-form mb60">
+          {% csrf_token %}
+          {{contact_form}}
+
             <div class="form-group">
               <input type="submit" class="btn btn-primary" id="submit" name="submit" value="Send Message">
             </div>
