--- a/src/home/templates/home.html
+++ b/src/home/templates/home.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block body %}
 
@@ -9,20 +10,20 @@
           <div class="col-md-8 col-md-offset-2">
 
             <div class="probootstrap-home-search probootstrap-animate">
-              <form action="" method="post">
+              <form action="{% url 'property:property_list' %}" method="get">
                 <h2 class="heading">Search your next dream home here</h2>
                 <div class="probootstrap-field-group">
                   <div class="probootstrap-fields">
                     
                     <div class="search-field">
                       <i class="icon-location2"></i>
-                      <input type="text" class="form-control" placeholder="Enter address, ZIP code, Neighborhoods">
+                      <input type="text" name='q' class="form-control" placeholder="Enter address, ZIP code, Neighborhoods">
                     </div>
                     <div class="search-category">
                       <i class="icon-chevron-down"></i>
-                      <select name="#" id="" class="form-control">
-                        <option value="">For Rent</option>
-                        <option value="">For Sale</option>
+                      <select name="property_type" id="" class="form-control">
+                        <option value="rent">For Rent</option>
+                        <option value="sale">For Sale</option>
                       </select>
                     </div>
                   </div>
@@ -44,49 +45,6 @@
   </section>
   <!-- END: slider  -->
 
-  <section class="probootstrap-section probootstrap-section-lighter">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <div class="probootstrap-card text-center probootstrap-animate">
-            <div class="probootstrap-card-media svg-sm colored">
-              <img src="img/flaticon/svg/001-prize.svg" class="svg" alt="Free HTML5 Template by uicookies.com">
-            </div>
-            <div class="probootstrap-card-text">
-              <h2 class="probootstrap-card-heading">Award Winning Brooker</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-              <p><a href="#">Find out more</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="probootstrap-card text-center probootstrap-animate">
-            <div class="probootstrap-card-media svg-sm colored">
-              <img src="img/flaticon/svg/005-new.svg" class="svg" alt="Free HTML5 Template by uicookies.com">
-            </div>
-            <div class="probootstrap-card-text">
-              <h2 class="probootstrap-card-heading">New Houses</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-              <p><a href="#">Find out more</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="probootstrap-card text-center  probootstrap-animate">
-            <div class="probootstrap-card-media svg-sm colored">
-              <img src="img/flaticon/svg/006-coin.svg" class="svg" alt="Free HTML5 Template by uicookies.com">
-            </div>
-            <div class="probootstrap-card-text">
-              <h2 class="probootstrap-card-heading">Affordable Houses</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-              <p><a href="#">Find out more</a></p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- END: section -->
 
   <section class="probootstrap-section">
     <div class="container">
@@ -95,7 +53,7 @@
       </div>
       <div class="row probootstrap-gutter10">
 
-      {% for category in category_list %}
+      {% for category in category_list_home %}
 
         <div class="col-md-6 col-sm-6">
           <a href="#" class="probootstrap-hover-overlay">
@@ -130,7 +88,7 @@
       </div>
       <div class="row">
 
-      {% for property in property_list %}
+      {% for property in property_list_home %}
 
         <div class="col-md-4 col-sm-6">
           <div class="probootstrap-card probootstrap-listing">
@@ -140,7 +98,7 @@
             <div class="probootstrap-card-text">
               <h2 class="probootstrap-card-heading"><a href="#">{{property}}</a></h2>
               <div class="probootstrap-listing-location">
-                <i class="icon-location2"></i> <span>360 W Wellington Chicago, IL 60657</span>
+                <i class="icon-location2"></i> <span>{{property.location}}</span>
               </div>
               <div class="probootstrap-listing-category for-sale"><span>{{property.property_type}}</span></div>
               <div class="probootstrap-listing-price"><strong>$ {{property.price}}</strong> / month</div>
@@ -149,19 +107,19 @@
               <ul>
                 <li>
                   Area
-                  <span>2400 m2</span>
+                  <span>{{property.area}} m2</span>
                 </li>
                 <li>
                   Beds
-                  <span>3</span>
+                  <span>{{property.beds_number}}</span>
                 </li>
                 <li>
                   Baths
-                  <span>2</span>
+                  <span>{{property.baths_number}}</span>
                 </li>
                 <li>
                   Garages
-                  <span>1</span>
+                  <span>{{property.garages_number}}</span>
                 </li>
               </ul>
             </div>
@@ -239,54 +197,23 @@
         <h2 class="mt0 mb50 text-center">Our Agents</h2>
       </div>
       <div class="row">
+
+      {% for agent in agent_list_home %}
+
         <div class="col-md-3">
           <div class="probootstrap-card probootstrap-person text-left">
             <div class="probootstrap-card-media">
-              <img src="img/person_1.jpg" class="img-responsive" alt="Free HTML5 Template by uicookies.com">
+              <img src="{{agent.image.url}}" class="img-responsive" alt="Free HTML5 Template by uicookies.com">
             </div>
             <div class="probootstrap-card-text">
-              <h2 class="probootstrap-card-heading mb0">Jeremy Slater</h2>
-              <p><small>Real Estate Brooker</small></p>
-              <p><a href="#">View Details</a></p>
+              <h2 class="probootstrap-card-heading mb0">{{agent}}</h2>
+              <p><small>{{agent.name}}</small></p>
             </div>
           </div>
         </div>
-        <div class="col-md-3">
-          <div class="probootstrap-card probootstrap-person text-left">
-            <div class="probootstrap-card-media">
-              <img src="img/person_2.jpg" class="img-responsive" alt="Free HTML5 Template by uicookies.com">
-            </div>
-            <div class="probootstrap-card-text">
-              <h2 class="probootstrap-card-heading mb0">James Butterly</h2>
-              <p><small>Buying Agent</small></p>
-              <p><a href="#">View Details</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="probootstrap-card probootstrap-person text-left">
-            <div class="probootstrap-card-media">
-              <img src="img/person_3.jpg" class="img-responsive" alt="Free HTML5 Template by uicookies.com">
-            </div>
-            <div class="probootstrap-card-text">
-              <h2 class="probootstrap-card-heading mb0">James Smith</h2>
-              <p><small>Real Estate Brooker</small></p>
-              <p><a href="#">View Details</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="probootstrap-card probootstrap-person text-left">
-            <div class="probootstrap-card-media">
-              <img src="img/person_4.jpg" class="img-responsive" alt="Free HTML5 Template by uicookies.com">
-            </div>
-            <div class="probootstrap-card-text">
-              <h2 class="probootstrap-card-heading mb0">Chris White</h2>
-              <p><small>Selling Agent</small></p>
-              <p><a href="#">View Details</a></p>
-            </div>
-          </div>
-        </div>
+
+      {% endfor %}
+
       </div>
     </div>
   </section>
