--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -30,7 +30,7 @@
 
         <nav role="navigation" class="probootstrap-nav hidden-xs">
           <ul class="probootstrap-main-nav">
-            <li><a href="/">Home</a></li>
+            <li {% if category_list_home %} class="active" {% endif %}><a href="/">Home</a></li>
             <li {% if property_list %} class="active" {% endif %}><a href="{% url 'property:property_list' %}">Properties</a></li>
             <li {% if agent_list %} class="active" {% endif %}><a href="{% url 'agents:agent_list' %}">Agents</a></li>
             <li {% if about %} class="active" {% endif %}><a href="{% url 'about:aboutus' %}">About</a></li>
