--- a/src/property/templates/property/detail.html
+++ b/src/property/templates/property/detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load bootstrap4 %}
 
 {% block body %}
 
@@ -55,9 +56,11 @@
         <div class="col-md-12">
           <h2>Reserve this property</h2>
           <form action="" method="POST">
-          {% csrf_token %}
-          {{reserve_form}}
-          <button type="submit" class="btn btn-primary">Submit</button>
+            {% csrf_token %}
+            {% bootstrap_form reserve_form %}
+            {% buttons %}
+                <button type="submit" class="btn btn-primary">Reserve</button>
+            {% endbuttons %}
           </form>
         </div>
       </div>
