--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>uiCookies:Haus &mdash; Free Bootstrap Theme, Free Responsive Bootstrap Website Template</title>
+    <title>Django | Real Estate | Portfolio</title>
     <meta name="description" content="Free Bootstrap Theme by uicookies.com">
     <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
     
@@ -23,11 +23,9 @@
 
   <header role="banner" class="probootstrap-header">
     <div class="container">
-        <a href="index.html" class="probootstrap-logo">Haus<span>.</span></a>
-        
+        <a href="/" class="probootstrap-logo">Django | Real Estate</a>        
         <a href="#" class="probootstrap-burger-menu visible-xs" ><i>Menu</i></a>
         <div class="mobile-menu-overlay"></div>
-
         <nav role="navigation" class="probootstrap-nav hidden-xs">
           <ul class="probootstrap-main-nav">
             <li {% if category_list_home %} class="active" {% endif %}><a href="/">Home</a></li>
@@ -36,17 +34,6 @@
             <li {% if about %} class="active" {% endif %}><a href="{% url 'about:aboutus' %}">About</a></li>
             <li {% if contact_form %} class="active" {% endif %}><a href="{% url 'contact:send_mail' %}">Contact</a></li>
           </ul>
-          <div class="extra-text visible-xs"> 
-            <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
-            <h5>Address</h5>
-            <p>198 West 21th Street, Suite 721 New York NY 10016</p>
-            <h5>Connect</h5>
-            <ul class="social-buttons">
-              <li><a href="#"><i class="icon-twitter"></i></a></li>
-              <li><a href="#"><i class="icon-facebook2"></i></a></li>
-              <li><a href="#"><i class="icon-instagram2"></i></a></li>
-            </ul>
-          </div>
         </nav>
     </div>
   </header>
